Remove default role and use only where needed in tests